Applied width to mainHeader, mainSection, mainFooter to fix display on mobile phones.

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ p {
     margin: 0 auto;
 }
 #mainHeader {
+	width: 100%;
     padding: 10px;
     border-bottom: 2px solid #D0CABF;
 }
@@ -101,6 +102,7 @@ nav ul ul {
 /* Navigation menu behaviour - end */
 
 #mainSection {
+	width: 100%;
     background-color: #F6F6F4;
     border-radius: 10px;
     padding: 10px 10px;
@@ -160,6 +162,7 @@ nav ul ul {
 }
 
 #mainFooter {
+	width: 100%;
     background-color: #4B4D52;
     padding: 10px;
 }
